--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -656,6 +656,10 @@
         <item quantity="one">%1$d member</item>
         <item quantity="other">%1$d members</item>
     </plurals>
+    <plurals name="MessageRequestProfileView_members_and_invited">
+        <item quantity="one">%1$d member (+%2$d invited)</item>
+        <item quantity="other">%1$d members (+%2$d invited)</item>
+    </plurals>
     <plurals name="MessageRequestProfileView_member_of_others">
         <item quantity="one">%d other</item>
         <item quantity="other">%d others</item>
