--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -313,6 +313,8 @@
   <string name="CustomDefaultPreference_using_custom">ಕಸ್ಟಂ ಬಳಸಲಾಗುತ್ತಿದೆ: %s</string>
   <string name="CustomDefaultPreference_using_default">ಪೂರ್ವನಿಯೋಜಿತ ಬಳಕೆ: %s</string>
   <string name="CustomDefaultPreference_none">ಯಾವುದೂ ಇಲ್ಲ</string>
+  <!--AvatarSelectionBottomSheetDialogFragment-->
+  <string name="AvatarSelectionBottomSheetDialogFragment__remove_photo">ಫೋಟೋ ತೆಗೆದುಹಾಕಿ</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">ಈಗ</string>
   <string name="DateUtils_minutes_ago">%dನಿ</string>
@@ -1209,6 +1211,9 @@
   <string name="MessageRequestsMegaphone__new_message_requests">ಹೊಸ: ಸಂದೇಶ ವಿನಂತಿಗಳು</string>
   <string name="MessageRequestsMegaphone__add_name">ಹೆಸರು ಸೇರಿಸಿ</string>
   <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">ಹೊಸ ಸಂಭಾಷಣೆಯನ್ನು ಸ್ವೀಕರಿಸಬೇಕೆ ಎಂದು ನೀವು ಈಗ ಆಯ್ಕೆ ಮಾಡಬಹುದು. \"ಸ್ವೀಕರಿಸಿ,\" \"ಅಳಿಸಿ\" ಅಥವಾ \"ನಿರ್ಬಂಧಿಸಿ\" ಆಯ್ಕೆಗಳನ್ನು ನೀವು ನೋಡುತ್ತೀರಿ.</string>
+  <!--HelpFragment-->
+  <string name="HelpFragment__help">ಸಹಾಯ</string>
+  <string name="HelpFragment__next">ಮುಂದೆ</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">ಇಂಪೋರ್ಟ್</string>
   <string name="arrays__use_default">ಡೀಫಾಲ್ಟ್ ಬಳಸಿ</string>
@@ -1287,6 +1292,7 @@
   <string name="preferences__fast">ತ್ವರಿತ</string>
   <string name="preferences__normal">ಸಾಧಾರಣ</string>
   <string name="preferences__slow">ನಿಧಾನ</string>
+  <string name="preferences__help">ಸಹಾಯ</string>
   <string name="preferences__advanced">ಸುಧಾರಿತ</string>
   <string name="preferences__privacy">ಖಾಸಗಿತನ</string>
   <string name="preferences__mms_user_agent">ಎಂಎಂಎಸ್ ಯೂಸರ್ ಏಜೆಂಟ್</string>
