--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -114,6 +114,8 @@
   <string name="CommunicationActions_start_voice_call">Spraak-oproep beginnen?</string>
   <string name="CommunicationActions_cancel">Annuleren</string>
   <string name="CommunicationActions_call">Bellen</string>
+  <string name="CommunicationActions_insecure_call">Onbeveiligde oproep</string>
+  <string name="CommunicationActions_carrier_charges_may_apply">Je mobielentelefonie-aanbieder brengt misschien extra kosten in rekening. Het nummer wat je op het punt staat te bellen is niet geregistreerd bij Signal. Dit gesprek zal via het telefonienetwerk lopen, niet over internet.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Je veiligheidsnummer met %1$s is veranderd. Dit kan betekenen dat iemand je communicatie probeert te onderscheppen, of gewoon dat %2$s Signal opnieuw heeft geïnstalleerd.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Je wilt misschien je veiligheidsnummer bij deze contactpersoon verifiëren.</string>
@@ -309,6 +311,11 @@
   <string name="CustomDefaultPreference_using_custom">Aanpassing in gebruik: %s</string>
   <string name="CustomDefaultPreference_using_default">Standaard in gebruik: %s</string>
   <string name="CustomDefaultPreference_none">Geen</string>
+  <!--AvatarSelectionBottomSheetDialogFragment-->
+  <string name="AvatarSelectionBottomSheetDialogFragment__choose_photo">Foto kiezen</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__take_photo">Foto nemen</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__choose_from_gallery">Kiezen vanuit galerij</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__remove_photo">Foto verwijderen</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Nu</string>
   <string name="DateUtils_minutes_ago">%d min</string>
@@ -744,7 +751,7 @@ Tot slot moet Signal de telefoonstatus kunnen lezen om te voorkomen dat Signal-o
   <string name="StickerManagementAdapter_stickers_you_received">Ontvangen stickerpakketten</string>
   <string name="StickerManagementAdapter_signal_artist_series">Signals eigen stickerpakketten</string>
   <string name="StickerManagementAdapter_no_stickers_installed">Geen stickerpakketten geïnstalleerd</string>
-  <string name="StickerManagementAdapter_stickers_from_incoming_messages_will_appear_here">Stickerpakketten uit binnenkomende berichten zullen hier verschijnen</string>
+  <string name="StickerManagementAdapter_stickers_from_incoming_messages_will_appear_here">Stickerpakketten uit binnengekomen berichten zullen hier verschijnen</string>
   <string name="StickerManagementAdapter_untitled">Zonder titel</string>
   <string name="StickerManagementAdapter_unknown">Onbekend</string>
   <!--StickerPackPreviewActivity-->
@@ -1215,6 +1222,27 @@ Signal zal nu toestemming vragen om je contactenlijst te lezen, om na te gaan wi
   <string name="MessageRequestsMegaphone__new_message_requests">Nieuw: gespreksverzoeken</string>
   <string name="MessageRequestsMegaphone__add_name">Naam toevoegen</string>
   <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">Je kunt vanaf nu kiezen of je een nieuwe gesprek wilt toelaten. Je zult opties krijgen om te ‘Accepteren’, ‘Wissen’ of  ‘Blokkeren’.</string>
+  <!--HelpFragment-->
+  <string name="HelpFragment__help">Hulp</string>
+  <string name="HelpFragment__have_you_read_our_faq_yet">Heb je onze antwoorden op veelgestelde vragen al gelezen?</string>
+  <string name="HelpFragment__next">Volgende</string>
+  <string name="HelpFragment__contact_us">Neem contact met ons op</string>
+  <string name="HelpFragment__tell_us_whats_going_on">Vertel ons wat er aan de hand is</string>
+  <string name="HelpFragment__include_debug_log">Foutopsporingslog bijvoegen.</string>
+  <string name="HelpFragment__whats_this">Waar dient deze optie voor?</string>
+  <string name="HelpFragment__how_do_you_feel">Hoe voel je je? (Optioneel)</string>
+  <string name="HelpFragment__support_info">Ondersteuningsinformatie</string>
+  <string name="HelpFragment__subject">Onderwerp:</string>
+  <string name="HelpFragment__signal_android_support_request">Signal-Android ondersteuningsverzoek</string>
+  <string name="HelpFragment__device_info">Apparaatinformatie:</string>
+  <string name="HelpFragment__android_version">Android-versie:</string>
+  <string name="HelpFragment__signal_version">Signal-versie:</string>
+  <string name="HelpFragment__locale">Taalgebied:</string>
+  <string name="HelpFragment__debug_log">Foutopsporingslog:</string>
+  <string name="HelpFragment__na">Niet van toepassing</string>
+  <string name="HelpFragment__could_not_upload_logs">Logs uploaden is mislukt</string>
+  <string name="HelpFragment__signal_support">Signal-ondersteuning</string>
+  <string name="HelpFragment__please_be_as_descriptive_as_possible">Probeer zo beschrijvend mogelijk te zijn om ons te helpen het probleem te begrijpen.</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Importeren</string>
   <string name="arrays__use_default">Gebruik systeemstandaard</string>
@@ -1255,7 +1283,7 @@ Signal zal nu toestemming vragen om je contactenlijst te lezen, om na te gaan wi
   <string name="preferences__pref_enter_sends_title">Enter-toets verzendt</string>
   <string name="preferences__pressing_the_enter_key_will_send_text_messages">Gebruik de Enter-toets voor het verzenden van tekstberichten</string>
   <string name="preferences__send_link_previews">Voorbeeldweergaven verzenden</string>
-  <string name="preferences__previews_are_supported_for">Verzend ook een voorbeeldafbeelding als er een koppeling naar Imgur, Instagram, Pinterest, Reddit of YouTube in je bericht staat.</string>
+  <string name="preferences__previews_are_supported_for">Verzend ook een voorbeeldafbeelding bij een bericht waarin een koppeling naar Imgur, Instagram, Pinterest, Reddit of YouTube in staat.</string>
   <string name="preferences__choose_identity">Identiteit kiezen</string>
   <string name="preferences__choose_your_contact_entry_from_the_contacts_list">Kies je contactgegevens uit de lijst met contactpersonen.</string>
   <string name="preferences__change_passphrase">Wachtwoord wijzigen</string>
@@ -1293,6 +1321,7 @@ Signal zal nu toestemming vragen om je contactenlijst te lezen, om na te gaan wi
   <string name="preferences__fast">Snel</string>
   <string name="preferences__normal">Normaal</string>
   <string name="preferences__slow">Langzaam</string>
+  <string name="preferences__help">Hulp</string>
   <string name="preferences__advanced">Geavanceerd</string>
   <string name="preferences__privacy">Privacy</string>
   <string name="preferences__mms_user_agent">Mms-gebruikersagent</string>
